Added banner section

--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
             <div>
                 <img src="images/banner4.png">
             </div>
+            <div class="flex flex-col items-center text-center gap-6">
+                <h1 class="lato font-extrabold text-7xl text-white">Exotic tastes at your<br>doorstep</h1>
+                <p class="lato font-medium text-xl">We supply highly quality organic products</p>
+                <button class="btn btn-xs bg-btnclr text-white lato font-extrabold text-xl sm:btn-sm md:btn-md lg:btn-lg">Shop Now</button>
+            </div>
+            <div class="flex justify-evenly bg-white rounded-lg">
+                <img src="/images/fruit1.png" class="w-36 h-28">
+                <img src="/images/fruit2.png">
+                <img src="/images/fruit3.png">
+                <img src="/images/fruit4.png">
+                <img src="/images/fruit5.png">
+            </div>
         </section>
 
     </main>
