added Deak width section with responsive

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 
 
-<body>
+<body class="bg-white">
     <header>
         <h1 class="lato font-extrabold bg-zinc-950 text-white text-center">RKO Fruit Burst Website</h1>
     </header>
@@ -268,7 +268,7 @@
         <!--Deal of Section-->
         <section class="mx-auto lg:mx-56 bg-white">
             <div>
-                <div class="flex justify-between">
+                <div class="flex justify-between text-center lg:text-start items-center lg: flex-col lg:flex-row">
                     <!--left-->
                     <div>
                         <h2 class="lato font-extrabold text-5xl text-black leading-normal">Deal of the day</h2>
@@ -300,9 +300,9 @@
                     </div>
                 </div>
                 <!--Fruits Sidebar-->
-                <div class="flex justify-center justify-evenly gap-3">
+                <div class="grid grid-rows-1 lg:grid-cols-4 justify-center gap-3">    <!--flex justify-center justify-evenly-->
                     <!--Apple-->
-                    <div class="text-center border-2 border-gray-300  w-[342px]">
+                    <div class="text-center border-2 border-gray-300 w-96">
                         <div class="flex justify-center">
                             <img src="/images/fruit6.png">
                         </div>
@@ -319,7 +319,7 @@
                     </div>
 
                     <!--Orange-->
-                    <div class="text-center border-2 border-gray-300  w-[342px]">
+                    <div class="text-center border-2 border-gray-300 w-96">
                         <div class="flex justify-center">
                             <img src="/images/fruit7.png">
                         </div>
@@ -336,7 +336,7 @@
                     </div>
 
                     <!--Red Dragon-->
-                    <div class="text-center border-2 border-gray-300 w-[342px]">
+                    <div class="text-center border-2 border-gray-300 w-96">
                         <div class="flex justify-center">
                             <img src="/images/fruit8.png">
                         </div>
@@ -353,7 +353,7 @@
                     </div>
 
                     <!--Banana-->
-                    <div class="text-center border-2 border-gray-300 w-[342px]">
+                    <div class="text-center border-2 border-gray-300 w-96">
                         <div class="flex justify-center">
                             <img src="/images/fruit9.png">
                         </div>
