Added Meet the team section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
     <!--Stylesheet connected-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css"/>
 
     <!--Font Awesome connection link-->
     <script src="https://kit.fontawesome.com/f558265ee4.js" crossorigin="anonymous"></script>
@@ -78,7 +78,7 @@
 
     <main>
         <!--Navbar Section-->
-        <nav class="bg-white lg:bg-btnclr flex justify-evenly items-center rounded-3xl px-1 lg:px-8 mx-auto lg:mx-56">
+        <nav class="bg-white lg:bg-btnclr flex justify-evenly items-center rounded-3xl px-1 my-1 lg:my-8 mx-auto lg:mx-56">
             <div class="lato-medium text-white flex items-center gap-3 invisible lg:visible">
                 <h5>Home</h5>
                 <h5>About Us</h5>
@@ -375,6 +375,26 @@
         </div>
         </section>
 
+        <!--Meet the team Section-->
+        <section class="mx-auto lg:mx-56 bg-white">
+            <div class="absolute">
+                <img src="/images/banner1.png" class="opacity-70">
+            <div class="text-center absolute top-60">
+            <h1 class="lato font-extrabold text-5xl text-white">Meet the team section</h1>
+            <p class="lato font-medium text-base text-white">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            <div class="flex justify-center">
+                <img src="/images/member1.png" class="rounded-full"></img>
+            </div>
+                <h1 class="lato font-bold text-2xl text-white">Awlad Hussain</h1>
+                <p class="lato font-medium text-base text-white">Fruit Expert</p>
+                <div>
+                    <i class="fa-brands fa-facebook bg-white text-btnclr"></i>
+                    <i class="fa-brands fa-twitter bg-white text-btnclr"></i>
+                    <i class="fa-brands fa-linkedin bg-white text-btnclr"></i>
+                </div>
+            </div>
+        </div>
+        </section>
     </main>
 
     <footer></footer>
